src/layout.css
@import "./variables";

.layout {
  align-items: center;
  align-self: flex-start;
  border: 0 transparent solid;
  box-sizing: border-box;
  display: flex;
  flex-flow: column;
  min-width: var(--min-width);
  padding: 0;
  width: 100%;

  & > :not(.layout):not(.wrapper),
  & > :not(.layout):not(.wrapper) > :not(.layout):not(.wrapper) {
    max-width: var(--max-width);
  }
}

/* workaround for IE10-11 flex min-height bug */
.wrapper {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  width: 100%;
}

.parent {
  flex-grow: 1;
  min-height: 100%;
}

.overflow {
  overflow-y: auto;
  overflow-x: hidden;
}

.fit {
  flex-grow: 0;
  flex-shrink: 0;
}

.auto {
  flex-grow: 1;
}

.fixedTop,
.fixedBottom {
  position: fixed;
  left: 50%;
  transform: translateX(-50%);
}

.fixedTop {
  top: 0;
}

.fixedBottom {
  bottom: 0;
}

